@startuml

title __CALLOG's Class Diagram__\n

  namespace com.example.callog {
    class com.example.callog.CallLog {
        - callType : String
        - date : String
        - duration : String
        - phNumber : String
        + CallLog()
        + getCallType()
        + getDate()
        + getDuration()
        + getPhNumber()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.CallLogContract {
        - CallLogContract()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.CallLogContract.CallLogEntry {
        {static} + CALL_DATE : String
        {static} + CALL_DURATION : String
        {static} + CALL_TYPE : String
        {static} + ID : String
        {static} + PHONE_NUMBER : String
        {static} + TABLE_NAME : String
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.CallLogDBHelper {
        {static} + CREATE_TABLE : String
        {static} + DATABASE_NAME : String
        {static} + DATABASE_VERSION : int
        {static} + DROP_TABLE : String
        + context : Context
        {static} - TAG : String
        + CallLogDBHelper()
        + addAllLogs()
        + getAllLogs()
        + getCallTypeTotal()
        + getCallTypeTotalBetweenDates()
        + getCallTypeTotalByNumber()
        + onCreate()
        + onUpgrade()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.CallLogListAdapter {
        - callLogs : ArrayList<CallLog>
        + CallLogListAdapter()
        + getCount()
        + getView()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.CallLogListAdapter.CallLogHolder {
        - callDateText : TextView
        - callDurationText : TextView
        - callTypeText : TextView
        - phNumberText : TextView
        + CallLogHolder()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.MainActivity {
        - btnSearchByDate : Button
        - btnSearchByNumber : Button
        - btnViewAllLog : Button
        - view : View
        + accessCallLogs()
        + closeApp()
        + onRequestPermissionsResult()
        # onCreate()
        - displayCallSummary()
        - setUpPieChart()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.ReadCallLogs {
        {static} - TAG : String
        - callLogs : ArrayList<CallLog>
        - context : Context
        + ReadCallLogs()
        + readCallLogsData()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.SearchByDateActivity {
        - barChart : BarChart
        - btnSearch : Button
        - endDateSetListener : OnDateSetListener
        - startDateSetListener : OnDateSetListener
        - tvEndDate : TextView
        - tvStartDate : TextView
        + setUpBarChart()
        # onCreate()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.SearchByNumberActivity {
        - btnSearch : Button
        - lineChart : LineChart
        - tvPhNumber : TextView
        + setUpLineChart()
        # onCreate()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.SplashScreenActivity {
        ~ imageView : ImageView
        - SLEEP_TIMER : int
        # onCreate()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.SplashScreenActivity.LogoLauncher {
        + run()
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.ViewAllLogsActivity {
        {static} - TAG : String
        - myListView : ListView
        + textViewReturn()
        # onCreate()
    }
  }
  

  com.example.callog.CallLogContract +-down- com.example.callog.CallLogContract.CallLogEntry
  com.example.callog.CallLogDBHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.example.callog.CallLogListAdapter -up-|> android.widget.ArrayAdapter
  com.example.callog.CallLogListAdapter +-down- com.example.callog.CallLogListAdapter.CallLogHolder
  com.example.callog.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.callog.MainActivity o-- com.example.callog.CallLogDBHelper : callLogDBHelper
  com.example.callog.SearchByDateActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.callog.SearchByNumberActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.callog.SplashScreenActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.callog.SplashScreenActivity +-down- com.example.callog.SplashScreenActivity.LogoLauncher
  com.example.callog.ViewAllLogsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.callog.ViewAllLogsActivity o-- com.example.callog.CallLogDBHelper : callLogDBHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
